# forecasting

./: README.md  pyproject.toml
data/covid_tracker/: us.csv
data/worldometers/: brazil.csv  france.csv  germany.csv  india.csv  italy.csv  japan.csv  sk.csv  spain.csv  us.csv
foretell/: .q_79_return_to_normal.py.swp  q_79_return_to_normal.py
gjp_quorum/: gjp_quorum_stuff.ipynb
gjp_quorum/.ipynb_checkpoints/: gjp_quorum_stuff-checkpoint.ipynb
lrt/: Round 4 Notebook.ipynb
lrt/round_2/: Q1 and Q3 and Q4.ipynb
lrt/round_2/.ipynb_checkpoints/: Q1 and Q3 and Q4-checkpoint.ipynb
lrt/round_3/: round_3_notebook.ipynb
metaculus/4732/: openai_extrapolation.py
metaculus/road_to_recovery/: linear_extrapolation.ipynb
