[tool.poetry]
name = "forecasting"
version = "0.1.0"
description = ""
authors = ["Eli Lifland <eli.d.lifland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.2"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
requests = "^2.24.0"
seaborn = "^0.11.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
